@@ -33,34 +33,71 @@ dependencies {
             project(':api-data-store-server-javascript'),
             'sencha:gxt:2.2.5',
             'jboss:javassist:3.28.0.GA',
-            'hibernate:hibernate-core:5.2.14.Final',
+            'org.hibernate:hibernate-core:6.6.40.Final',
+            'org.glassfish:jakarta.el:4.0.2',
             'fasterxml:classmate:1.3.0',
-            'eclipse:jetty-deploy:10.0.25',
-            'javax.activation:activation:1.1.1',
-            'javax:servlet-api:4.0.1',
+            'org.eclipse.jetty:jetty-deploy:12.1.1',
+            'jakarta.activation:jakarta.activation-api:2.1.2',
+            'jakarta.servlet:jakarta.servlet-api:6.0.0',
+            'jakarta.validation:jakarta.validation-api:3.0.2',
+            'jakarta.annotation:jakarta.annotation-api:2.1.1',
             'javax:mail:1.6.2',
-            'springframework:spring-orm:5.3.39',
+            'org.springframework:spring-orm:6.1.10',
             'cisd:cisd-hotdeploy:13.01.0',
             'apache:poi-ooxml:3.17',
-            'hibernate:hibernate-validator:4.3.2.Final',
+            'org.hibernate:hibernate-validator:8.0.1.Final',
             'unimi:fastutil:5.1.5',
             'apache:commons-collections4:4.1',
             'apache:commons-compress:1.8',
-            'springframework:spring-context-support:5.3.39',
-            'ehcache:ehcache:2.10.0',
+            'org.springframework:spring-context-support:6.1.10',
+            'org.springframework:spring-expression:6.1.10',
+            //'ehcache:ehcache:2.10.0',
             'jline:jline:0.9.94',
             'jsoup:jsoup:1.14.2',
             'org.apache.pdfbox:pdfbox:2.0.30',
             'org.apache.pdfbox:fontbox:2.0.30',
             'org.apache.pdfbox:xmpbox:2.0.30',
-            'org.apache.pdfbox:pdfbox-io:3.0.0',
-            'de.rototor.pdfbox:graphics2d:3.0.0',
+            'de.rototor.pdfbox:graphics2d:0.36',
+//            'org.apache.pdfbox:pdfbox-io:3.0.0',
+//            'de.rototor.pdfbox:graphics2d:3.0.0',
             'com.openhtmltopdf:openhtmltopdf-core:1.0.10',
-            'com.openhtmltopdf:openhtmltopdf-pdfbox:1.0.10'
+            'com.openhtmltopdf:openhtmltopdf-pdfbox:1.0.10',
+            'org.eclipse.jetty:jetty-server:12.1.1',
+            'org.eclipse.jetty.ee:jetty-ee-webapp:12.1.1',
+            'org.eclipse.jetty.ee10:jetty-ee10-webapp:12.1.1',
+            'org.eclipse.jetty.ee10:jetty-ee10-servlet:12.1.1',
+            'org.eclipse.jetty:jetty-security:12.1.1',
+            'org.eclipse.jetty:jetty-session:12.1.1',
+            'org.eclipse.jetty:jetty-deploy:12.1.1',
+            'org.eclipse.jetty.ee10:jetty-ee10-annotations:12.1.1',
+            'org.eclipse.jetty.ee10:jetty-ee10-plus:12.1.1',
+            'org.eclipse.jetty.ee10:jetty-ee10-jndi:12.1.1',
+            'org.eclipse.jetty:jetty-jndi:12.1.1',
+            'org.eclipse.jetty:jetty-xml:12.1.1',
+            'org.eclipse.jetty:jetty-plus:12.1.1',
+            'org.eclipse.jetty.compression:jetty-compression-common:12.1.1',
+            'org.eclipse.jetty.compression:jetty-compression-gzip:12.1.1',
+            'org.eclipse.jetty:jetty-annotations:12.1.1',
+            'aspectj:aspectjweaver:1.8.12'
+
+    implementation 'javax.cache:cache-api:1.1.1'
+    implementation("org.ehcache:ehcache-jakarta:3.11.1") {
+        artifact {
+            name = "ehcache-jakarta"
+            type = "jar"
+        }
+    }
+//            {
+//        capabilities {
+//            requireCapability('org.ehcache:ehcache-jakarta')
+//        }
+//    }
 
 
     runtimeOnly 'slf4j:slf4j-jdk14:1.7.24',
-            'apache:commons-fileupload:1.3.3'
+            runtimeOnly('org.apache.commons:commons-fileupload2-jakarta-servlet5:2.0.0-M4'){
+                exclude group:'org.junit'
+            }
 
     asExecRuntime files("../core-plugin-openbis/dist/core-plugins/imaging/1/as/api-listener/imaging-dataset-interceptor/lib/imaging-dataset-interceptor.jar"),
             files("../core-plugin-openbis/dist/core-plugins/imaging/1/as/services/imaging/lib/openBIS-imaging-technology.jar"),
@@ -76,15 +113,17 @@ dependencies {
             project(path: ':lib-openbis-commonbase', configuration: 'tests'),
             project(path: ':lib-two-phase-transaction', configuration: 'tests'),
             project(path: ':api-data-store-server-javascript', configuration: 'tests'),
+            'org.aspectj:aspectjweaver:1.9.22.1',
+            'org.aspectj:aspectjrt:1.9.22.1',
             'fjelmer:classycle:1.4.2',
             'testng:testng:6.8-CISD',
-            'springframework:spring-test:5.3.39',
-            'apache:commons-fileupload:1.3.3',
-            'startnet:apgdiff:2.3',
+            'junit:junit:4.13.2',
+            'org.springframework:spring-test:6.0.0',
+            'org.apache.commons:commons-fileupload2-jakarta-servlet5:2.0.0-M4',
             'hamcrest:hamcrest-integration:1.3',
             'hamcrest:hamcrest-library:1.3'
 
-    testRuntimeFirst 'javax:servlet-api:4.0.1'
+    testRuntimeFirst 'jakarta:jakarta.servlet-api:6.1.0'
 
 }
 
@@ -243,11 +282,35 @@ tasks.register('dynamicApiJavadocTar', Tar) {
 
 testProjectSamplesEnabled.dependsOn(copyTestData)
 cleanDbSuiteProjectSamplesEnabled.dependsOn(testProjectSamplesEnabled)
+
 test.maxHeapSize = "10240m"
 test.jvmArgs += [
         '-Duser.timezone=Europe/Zurich',
         '-Djava.util.logging.config.file=etc/jullogging.properties']
 test.dependsOn(copyTestData)
 test.dependsOn(cleanDbSuite)
+
+task runOnlyOneTestSuite(type: Test) {
+    // Dedicated task to run only the DB TestNG suite.
+    testClassesDirs = sourceSets.test.output.classesDirs
+    classpath = sourceSets.test.runtimeClasspath
+    environment.remove("DISPLAY")
+    useTestNG {
+        suites 'sourceTest/java/tests_system_test_one.xml'
+    }
+    systemProperty "ant.project.name", project.name
+    maxHeapSize = "10240m"
+    jvmArgs += [
+            '-Duser.timezone=Europe/Zurich',
+            '-Djava.util.logging.config.file=etc/jullogging.properties',
+            '-Dorg.eclipse.jetty.util.log.class=org.eclipse.jetty.util.log.StrErrLog',
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens", "java.base/java.io=ALL-UNNAMED"
+    ]
+    testLogging.showStandardStreams = true
+    ignoreFailures = true
+    dependsOn(testClasses, copyTestData)
+}
 
 apply from: 'elndev.gradle'
